# NP.Avalonia.Gidon

./: .gitignore  .gitmodules  README.md
Messages/NP.Gidon.Messages/: MessagesTopicsGetter.cs  NP.Gidon.Messages.csproj
Messages/NP.Gidon.MessagesProtos/: Messages.proto  NP.Gidon.MessagesProtos.csproj
Messages/NP.Gidon.PythonMessages/: LICENSE  Messages_pb2.py  Messages_pb2.pyi  NP.Gidon.PythonMessages.pyproj  PipBuildAndPublishCommands.txt  README.md  generate_stubs.txt  pyproject.toml
Messages/NP.Gidon.PythonMessages/src/: Messages_pb2.py
Prototypes/: nohup.out
Prototypes/AppImplantingTests/: App.axaml  App.axaml.cs  AppImplantingTest.csproj  AppImplantingTests.sln  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
Prototypes/AuthenticationPluginTest/: App.axaml  App.axaml.cs  AuthenticationPluginTest.csproj  AuthenticationPluginTest.sln  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
Prototypes/AvaloniaApplication1/: App.axaml.cs  MainWindow.axaml.cs
Prototypes/DockableAppImplantsDemo/: App.axaml  App.axaml.cs  DockableAppImplantsDemo.csproj  DockableAppImplantsDemo.sln  MainWindow.axaml  MainWindow.axaml.cs
Prototypes/GidonTest1/: App.axaml  App.axaml.cs  GidonTest1.csproj  GidonTest1.sln  MainWindow.axaml  MainWindow.axaml.cs  (+1 more)
src/: AssemblyInfo.cs  DockItemImplantedWindowHost.cs  MultiPlatformProcessInitInfoWithClient.cs  MultiPlatformProcessInitInfoWithMatcher.cs  NP.Avalonia.Gidon.csproj  NP.Avalonia.Gidon.nuspec  PluginAttachedProperties.cs  PluginControl.cs  PluginManager.cs  WinProcessAttachedProperties.cs  WindowHandleMatcher.cs
(+79 files in other folders)
